--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,9 @@ option(${UPPER_PROJECT_NAME}_VERBOSE "Enable verbose output" OFF)
 option(${UPPER_PROJECT_NAME}_SEQUENTIAL_INITIALIZATION
   "Sequentially consistent initialization" OFF)
 
+option(${UPPER_PROJECT_NAME}_WITH_DISTCONV
+  "Enable Distconv distributed convolution" OFF)
+
 # FIXME what if "fp16"?
 set(${UPPER_PROJECT_NAME}_DATATYPE "float"
   CACHE STRING "The datatype to use in LBANN")
@@ -274,6 +277,11 @@ if (LBANN_WITH_CONDUIT)
       "Alternatively, build with LBANN_WITH_CONDUIT=OFF.")
   endif(NOT LBANN_HAS_CONDUIT)
 endif (LBANN_WITH_CONDUIT)
+
+if (LBANN_WITH_DISTCONV)
+  message(STATUS "DISTCONV requested")
+  set(LBANN_HAS_DISTCONV ON)
+endif (LBANN_WITH_DISTCONV)
 
 # Handle the documentation
 add_subdirectory(docs)
