--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,9 @@ option(${UPPER_PROJECT_NAME}_VERBOSE "Enable verbose output" OFF)
 option(${UPPER_PROJECT_NAME}_SEQUENTIAL_INITIALIZATION
   "Sequentially consistent initialization" OFF)
 
+option(${UPPER_PROJECT_NAME}_WITH_DISTCONV
+  "Enable Distconv distributed convolution" OFF)
+
 # FIXME what if "fp16"?
 set(${UPPER_PROJECT_NAME}_DATATYPE "float"
   CACHE STRING "The datatype to use in LBANN")
@@ -275,6 +278,20 @@ if (LBANN_WITH_CONDUIT)
   endif(NOT LBANN_HAS_CONDUIT)
 endif (LBANN_WITH_CONDUIT)
 
+if (LBANN_WITH_DISTCONV)
+  message(STATUS "DISTCONV requested")
+  find_package(DISTCONV)
+  set(LBANN_HAS_DISTCONV ${DISTCONV_FOUND}) 
+  if (NOT LBANN_HAS_DISTCONV)
+    message(FATAL_ERROR
+      "Requested LBANN_WITH_DISTCONV but Distconv not found. "
+      "Distconv is now disabled. "
+      "Try specifying DISTCONV_DIR as the root of an DISTCONV install. "
+      "Alternatively, build with LBANN_WITH_DISTCONV=OFF.")
+    set(LBANN_WITH_DISTCONV OFF)
+  endif(NOT LBANN_HAS_DISTCONV)      
+endif (LBANN_WITH_DISTCONV)
+
 # Handle the documentation
 add_subdirectory(docs)
 
@@ -325,8 +342,13 @@ if (LBANN_HAS_ALUMINUM)
   target_link_libraries(lbann PUBLIC ALUMINUM::ALUMINUM)
 endif ()
 
+
 if (LBANN_HAS_CONDUIT)
   target_link_libraries(lbann PUBLIC CONDUIT::CONDUIT)
+endif ()
+
+if (LBANN_HAS_DISTCONV)
+  target_link_libraries(lbann PUBLIC DISTCONV::DISTCONV)
 endif ()
 
 #== FIXME HERE DOWN ==
@@ -334,7 +356,7 @@ endif ()
 if (LBANN_HAS_CUDA)
   target_link_libraries(lbann PUBLIC ${CUDA_LIBRARIES})
   target_link_libraries(lbann PUBLIC cuda::toolkit)
-  if (WITH_NVPROF)
+  if (LBANN_WITH_NVPROF)
     add_definitions(-DLBANN_NVPROF)
     target_link_libraries(lbann PUBLIC ${NVTX_LIBRARIES})
   endif ()
