--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,7 +280,16 @@ endif (LBANN_WITH_CONDUIT)
 
 if (LBANN_WITH_DISTCONV)
   message(STATUS "DISTCONV requested")
-  set(LBANN_HAS_DISTCONV ON)
+  find_package(DISTCONV)
+  set(LBANN_HAS_DISTCONV ${DISTCONV_FOUND}) 
+  if (NOT LBANN_HAS_DISTCONV)
+    message(FATAL_ERROR
+      "Requested LBANN_WITH_DISTCONV but Distconv not found. "
+      "Distconv is now disabled. "
+      "Try specifying DISTCONV_DIR as the root of an DISTCONV install. "
+      "Alternatively, build with LBANN_WITH_DISTCONV=OFF.")
+    set(LBANN_WITH_DISTCONV OFF)
+  endif(NOT LBANN_HAS_DISTCONV)      
 endif (LBANN_WITH_DISTCONV)
 
 # Handle the documentation
@@ -333,8 +342,13 @@ if (LBANN_HAS_ALUMINUM)
   target_link_libraries(lbann PUBLIC ALUMINUM::ALUMINUM)
 endif ()
 
+
 if (LBANN_HAS_CONDUIT)
   target_link_libraries(lbann PUBLIC CONDUIT::CONDUIT)
+endif ()
+
+if (LBANN_HAS_DISTCONV)
+  target_link_libraries(lbann PUBLIC DISTCONV::DISTCONV)
 endif ()
 
 #== FIXME HERE DOWN ==
